<resources>
    <string name="app_name">FoodPlanner</string>
    <string name="scroll">scroll</string>
    <string name="login">Log In</string>

    <string name="daily">Daily Inspiration</string>
    <string name="meals">Meals</string>
    <string name="egyptianmeals">"Famous Egyptian Meals "</string>
    <string name="favIcon">Fav</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="favbttn">favbbtn</string>

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>

    <string name="select">select item</string>

    //heading
    <string name="heading_one"> one</string>
    <string name="heading_two">two</string>
    <string name="heading_three">three</string>


    //Describtion

    <string name="desc_one"> desone</string>
    <string name="desc_two"> destwo</string>
    <string name="desc_three"> desthree</string>
    <string name="searchby">Search By</string>
    <string name="categorytext">Category</string>
    <string name="countrytext">Country</string>
    <string name="ingredient">Ingredient</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Fav" />
    <string name="searchbycategory">Search By Category</string>
    <string name="categories">Categories</string>
    <string name="country">Countries</string>
    <string name="countrysearch">Search By Country</string>
    <string name="ingredientSearch">Search by ingredient</string>
    <string name="ingredients">Ingredients</string>
    <string name="mealsbyingredienr">Meals by ingredient</string>
    <string name="mealbycategory">Meals by Category</string>
    <string name="mealsbtcategory">Meals by Category</string>
    <string name="searchmealsbycountry">Search for meal by country</string>
    <string name="mealbycategoryy">Search for meal by category</string>
    <string name="ingredientsearch">Search for meals by ingredient</string>
    <string name="name">Name</string>
    <string name="area">Country</string>
    <string name="youtubevideo">Youtube Video</string>
    <string name="steps">Steps</string>
    <string name="addtoFav">Add To Favourite</string>
    <string name="addtoPlan">Add to Plan</string>


</resources>