<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    tools:context=".Details.Details_Fragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/detailImage"
                android:layout_width="match_parent"
                android:layout_height="208dp"
                android:layout_marginTop="50dp"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/steps"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailInstruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="16sp" />

            <Button
                android:id="@+id/Fav_btn"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addtoFav"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:layout_margin="5dp"
                android:id="@+id/Plan_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addtoPlan"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/youtubevideo"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:videoId=""
                    app:autoPlay="true" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>